First fully working version of the barometer driver

--- a/boards/modalai/rb5-flight/full-m0052.config
+++ b/boards/modalai/rb5-flight/full-m0052.config
@@ -11,6 +11,15 @@ muorb start
 # any possible race conditions.
 sleep 1
 
+# IMU (accelerometer / gyroscope)
+# Start this first because it gets the high rate interrupts coming in to the
+# DSP. Without this the DSP will oversleep and miss critical timeouts.
+# TODO: Why is that the case?
+qshell icm42688p start -s
+
+sleep 1
+
+# Load in all of the parameters that have been saved in the file
 param load
 
 # We don't change the value of SYS_AUTOCONFIG but if it doesn't
@@ -18,13 +27,44 @@ param load
 # missing parameter error.
 param touch SYS_AUTOCONFIG
 
-# Causes IMU FIFO read to be triggered every 2ms. This has to be here to prevent
-# any other values from being used. Other values will cause a crash!
-param set IMU_GYRO_RATEMAX 500
+# Start all of the device drivers on DSP
+
+# Magnetometer
+qshell ist8310 start -R 10 -X -b 1
+
+# Barometer
+qshell icp10100 start -I -b 5
+
+# ESC driver
+qshell modalai_esc start
+qshell mixer load /dev/uart_esc quad_x.main.mix
+
+# APM power monitor
+qshell voxlpm start -X -b 2
+
+# Start all of the device drivers on the applications processor
+
+# Pixhawk 4 GPS module
+gps start -d /dev/ttyHS2 -b 38400
+
+spektrum_rc start -d /dev/ttyHS1
+rc_update start
+
+# Start all of the processing modules on DSP
+
+qshell sensors start
+qshell ekf2 start
+qshell mc_pos_control start
+qshell mc_att_control start
+qshell mc_rate_control start
+qshell mc_hover_thrust_estimator start
+qshell land_detector start multicopter
 
 sleep 1
 
-# Start logging on start and use timestamps for log files
+# Start all of the processing modules on the applications processor
+
+# Start logging on takeoff and use timestamps for log files
 logger start -t
 
 dataman start
@@ -34,67 +74,21 @@ navigator start
 commander start
 commander mode manual
 
+# This is needed for altitude and position hold modes
+flight_mode_manager start
+
 # Can use something like this to direct PX4 to a specific QGC
 # mavlink start -x -o 14547 -r 40000 -n eth1 -t 192.168.0.117
 
 mavlink start -x -u 14556 -r 40000
+
 sleep 1
+
 mavlink stream -u 14556 -s HIGHRES_IMU -r 5
 mavlink stream -u 14556 -s ATTITUDE -r 5
 mavlink stream -u 14556 -s RC_CHANNELS -r 20
 
-# Pixhawk 4 GPS module
-gps start -d /dev/ttyHS2 -b 38400
-
 sleep 1
-
-spektrum_rc start -d /dev/ttyHS1
-rc_update start
-
-# Magnetometer
-qshell ist8310 start -R 10 -X -b 1
-
-# Barometer
-qshell baro_thin_client start
-
-# IMU (accelerometer / gyroscope)
-qshell icm42688p start -s
-
-sleep 1
-
-# sensors start
-qshell sensors start
-
-# ekf2 start
-qshell ekf2 start
-
-# mc_pos_control start
-qshell mc_pos_control start
-
-# mc_att_control start
-qshell mc_att_control start
-
-# mc_rate_control start
-qshell mc_rate_control start
-
-qshell mc_hover_thrust_estimator start
-
-# This is needed for altitude and position hold modes
-flight_mode_manager start
-
-# land_detector start multicopter
-qshell land_detector start multicopter
-
-sleep 1
-
-# ESC driver
-qshell modalai_esc start
-qshell mixer load /dev/uart_esc quad_x.main.mix
-
-sleep 1
-
-# APM power monitor
-qshell voxlpm start -X -b 2
 
 # Start up the IMU server to support VIO
 imu_server start
