First complete version of new scheme

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -70,6 +70,7 @@ set(msg_files
 	gps_inject_data.msg
 	home_position.msg
 	hover_thrust_estimate.msg
+	imu_server.msg
 	input_rc.msg
 	iridiumsbd_status.msg
 	irlock_report.msg
