Added more parameters to fake-configuration.config

--- a/boards/modalai/rb5-flight/fake-calibration.config
+++ b/boards/modalai/rb5-flight/fake-calibration.config
@@ -9,9 +9,52 @@ param load
 
 sleep 2
 
+param set BAT1_CAPACITY 3000
+param set BAT1_N_CELLS 4
+param set BAT1_R_INTERNAL 0.008
+param set BAT1_V_CHARGED 4.15
+param set BAT_CAPACITY 3000
+param set BAT_N_CELLS 4
+param set BAT_R_INTERNAL 0.008
+param set BAT_V_CHARGED 4.15
+
+param set COM_FLTMODE1 2
+param set COM_FLTMODE4 1
+param set COM_FLTMODE6 0
+
+param set RC1_MAX 1894
+param set RC1_MIN 1104
+param set RC1_REV -1
+param set RC2_MAX 1895
+param set RC2_MIN 1103
+param set RC2_TRIM 1499
+param set RC3_MAX 1887
+param set RC3_MIN 1110
+param set RC3_TRIM 1110
+param set RC4_MAX 1896
+param set RC4_MIN 1105
+param set RC4_REV -1
+param set RC5_MAX 1898
+param set RC5_MIN 1102
+param set RC6_MAX 1898
+param set RC6_MIN 1102
+param set RC_CHAN_CNT 7
+param set RC_MAP_FLTMODE 6
+param set RC_MAP_KILL_SW 5
+param set RC_MAP_PITCH 2
+param set RC_MAP_ROLL 1
+param set RC_MAP_THROTTLE 3
+param set RC_MAP_YAW 4
+
+param set SENS_BOARD_X_OFF -0.307886
+param set SENS_BOARD_Y_OFF -1.69588
+
 param set CAL_ACC0_ID 1
 param set CAL_ACC0_PRIO 100
 param set CAL_ACC0_ROT -1
+param set CAL_ACC1_PRIO 50
+param set CAL_ACC2_PRIO 50
+param set CAL_ACC3_PRIO 50
 
 
 param set CAL_ACC0_XOFF 0.1
@@ -25,6 +68,9 @@ param set CAL_ACC0_ZSCALE 0.9
 param set CAL_GYRO0_ID 1
 param set CAL_GYRO0_PRIO 100
 param set CAL_GYRO0_ROT -1
+param set CAL_GYRO1_PRIO 50
+param set CAL_GYRO2_PRIO 50
+param set CAL_GYRO3_PRIO 50
 
 
 param set CAL_GYRO0_XOFF 0.1
@@ -35,6 +81,9 @@ param set CAL_GYRO0_ZOFF 0.1
 param set CAL_MAG0_ID 1
 param set CAL_MAG0_PRIO 100
 param set CAL_MAG0_ROT -1
+param set CAL_MAG1_PRIO 50
+param set CAL_MAG2_PRIO 50
+param set CAL_MAG3_PRIO 50
 
 
 param set CAL_MAG0_XCOMP 0.1
