--- a/boards/modalai/rb5-flight/m0052-set-default-parameters.config
+++ b/boards/modalai/rb5-flight/m0052-set-default-parameters.config
@@ -116,6 +116,19 @@ param set COM_DISARM_PRFLT -1
 
 param set MAV_BROADCAST 1
 
+# Default battery parameters for m500
+param set BAT1_N_CELLS 4
+param set BAT1_R_INTERNAL 0.008
+param set BAT1_CAPACITY 3000
+
+param set BAT1_V_CHARGED 4.15
+param set BAT1_V_EMPTY 3.50
+param set MC_BAT_SCALE_EN 1
+
+param set BAT_LOW_THR 0.15
+param set BAT_CRIT_THR 0.10
+param set BAT_EMERGEN_THR 0.05
+
 param save
 
 sleep 2
