--- a/boards/modalai/rb5-flight/m0052-set-default-parameters.config
+++ b/boards/modalai/rb5-flight/m0052-set-default-parameters.config
@@ -118,11 +118,16 @@ param set MAV_BROADCAST 1
 
 # Default battery parameters for m500
 param set BAT1_N_CELLS 4
+param set BAT_N_CELLS 4
 param set BAT1_R_INTERNAL 0.008
+param set BAT_R_INTERNAL 0.008
 param set BAT1_CAPACITY 3000
+param set BAT_CAPACITY 3000
 
 param set BAT1_V_CHARGED 4.15
+param set BAT_V_CHARGED 4.15
 param set BAT1_V_EMPTY 3.50
+param set BAT_V_EMPTY 3.50
 param set MC_BAT_SCALE_EN 1
 
 param set BAT_LOW_THR 0.15
